--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/styled-engine": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "babel-preset-next": "^1.4.0",
     "next": "11.1.2",
     "node-sass": "^5.0.0",
     "nprogress": "^0.2.0",
@@ -22,6 +25,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
   }
